bbsが表示されるように修正

--- a/src/main/resources/templates/bbsview.html
+++ b/src/main/resources/templates/bbsview.html
@@ -9,7 +9,7 @@
 	<h3>掲示板アプリケーション</h3>
 	記事件数　　　：<span th:text="${listSize}">100</span>件<br>
 	データ取得時間：<span th:text="${lapTime}">1600</span>ミリ秒<br>
-	<form th:action="@{/bbs/postarticle}" th:object="${ArticleForm}" method="post">
+	<form th:action="@{/bbs/postarticle}" th:object="${articleForm}" method="post">
 		<div th:errors="*{name}" class="error-messages">エラー！</div>
 		投稿者名：<input type="text" name="name" th:field="*{name}" th:errorclass="error-input" value="山田"><br>
 		<div th:errors="*{content}" class="error-messages">エラー！</div>
@@ -20,7 +20,7 @@
 	<div th:each="article : ${articleList}">
 		投稿者名：<span th:text="${article.name}">記事太郎</span><br>
 		投稿内容：<pre><span th:text="${article.content}">記事投稿内容</span></pre>
-		<form th:action="@{/bbs/deletearticle}" th:object="${ArticleForm}" method="post">
+		<form th:action="@{/bbs/deletearticle}" th:object="${articleForm}" method="post">
 			<input type="hidden" name="id" th:value="${article.id}">
 			<input type="submit" value="記事削除">
 			<button type="button" th:value="${article.id}"><img width="10" height="10" src="../../static/img/like.png" th:src="@{/img/like.png}"></button>
@@ -32,21 +32,21 @@
 			コメント者名：<span th:text="${comment.name}">コメント太郎</span><br>
 			コメント内容：<pre><span th:text="${comment.content}">コメント投稿内容</span></pre>
 		</div>
-		<form th:action="@{/bbs/postcomment}" th:object="${CommentForm}" method="post">
+		<form th:action="@{/bbs/postcomment}" th:object="${commentForm}" method="post">
 			<input type="hidden" name="articleId" th:value="${article.id}">
-			<div th:if="${article.id == CommentForm.articleId}">
+			<div th:if="${article.id == commentForm.articleId}">
 				<div th:errors="*{name}" class="error-messages">エラー！</div>
 			</div>
 			名前:<br>
-			<input type="text" name="name" th:if="${article.id == CommentForm.articleId}" th:field="*{name}" th:errorclass="error-input" value="コメント太郎">
-			<input type="text" name="name" th:if="${article.id != CommentForm.articleId}">
+			<input type="text" name="name" th:if="${article.id == commentForm.articleId}" th:field="*{name}" th:errorclass="error-input" value="コメント太郎">
+			<input type="text" name="name" th:if="${article.id != commentForm.articleId}">
 			<br>
-			<div th:if="${article.id == CommentForm.articleId}">
+			<div th:if="${article.id == commentForm.articleId}">
 				<div th:errors="*{content}" class="error-messages">エラー！</div>
 			</div>
 			コメント:<br>
-			<textarea name="content" th:if="${article.id == CommentForm.articleId}" th:field="*{content}" th:errorclass="error-input" rows="5" cols="25">コメント投稿内容</textarea>
-			<textarea name="content" th:if="${article.id != CommentForm.articleId}" rows="5" cols="25"></textarea>
+			<textarea name="content" th:if="${article.id == commentForm.articleId}" th:field="*{content}" th:errorclass="error-input" rows="5" cols="25">コメント投稿内容</textarea>
+			<textarea name="content" th:if="${article.id != commentForm.articleId}" rows="5" cols="25"></textarea>
 			<br>
 			<input type="submit" value="コメント投稿" >
 		</form>
